Set width of the body 100vw and overflow to hidden on the body to prevent page movement when displaying modal dialog which causes the scrollbar region on the page to display.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,13 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: hidden;
 }
 
 .mat-icon-button.large {
